--- a/app/src/main/res/layout/modify_view.xml
+++ b/app/src/main/res/layout/modify_view.xml
@@ -21,6 +21,7 @@
             android:id="@+id/modifyAmountEditView"
             android:layout_width="wrap_content"
             android:layout_height="61dp"
+            android:maxLength="6"
             android:ems="10"
             android:inputType="numberDecimal" />
 
