--- a/app/src/main/res/layout/fragment_cam.xml
+++ b/app/src/main/res/layout/fragment_cam.xml
@@ -11,7 +11,7 @@
         android:layout_height="45dp"
         android:layout_weight="1"
         android:background="#000000"
-        android:onClick="onClickCam1"
+        android:onClick="onClickAccept"
         android:text="확인"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
@@ -28,7 +28,7 @@
         android:layout_height="45dp"
         android:layout_weight="1"
         android:background="#000000"
-        android:onClick="onClickCam2"
+        android:onClick="onClickCancel"
         android:text="다시 촬영"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
@@ -61,6 +61,15 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_end="91dp" />
 
-
+    <TextView
+        android:id="@+id/DetectedFood"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:text="TextView"
+        android:textSize="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageview" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
