--- a/app/src/main/res/layout/test_item.xml
+++ b/app/src/main/res/layout/test_item.xml
@@ -8,14 +8,13 @@
         <CheckedTextView
             android:id="@+id/ctv"
             android:layout_width="match_parent"
-            android:layout_height="?android:attr/listPreferredItemHeightSmall"
+            android:layout_height="wrap_content"
             android:checkMark="?android:attr/listChoiceIndicatorSingle"
             android:paddingStart="?android:attr/listPreferredItemPaddingStart"
             android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
             android:textAlignment="viewStart"
             android:textAppearance="?android:attr/textAppearanceListItemSmall"
-            android:textSize="24sp"
-            />
+            android:textSize="24sp" />
 
 
         <TextView
