--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -3,42 +3,56 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/headLineText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:gravity="center"
+        android:background="@color/calendar_background"
+        android:text="오늘 섭취한 영양소"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@id/headLineSolid"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/headLineSolid"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_centerInParent="true"
+        android:background="#AAAAAA"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/headLineText" />
+
 
     <ScrollView
         android:id="@+id/infoScrollView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        android:background="@color/calendar_background"
+        app:layout_constraintBottom_toTopOf="@id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/headLineSolid">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/headLineText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:gravity="center"
-                android:text="오늘 섭취한 영양소"
-                android:textSize="30sp"
-                app:layout_constraintEnd_toEndOf="@id/nutrients"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:orientation="vertical"
+            android:gravity="center">
 
             <LinearLayout
                 android:id="@+id/nutrients"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:orientation="vertical"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/headLineText">
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -46,11 +60,11 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="150dp"
+                        android:layout_width="120dp"
                         android:layout_height="wrap_content"
                         android:gravity="end"
                         android:text="칼로리  "
-                        android:textSize="25sp" />
+                        android:textSize="23sp" />
 
                     <TextView
                         android:id="@+id/kcal"
@@ -59,13 +73,13 @@
                         android:focusableInTouchMode="false"
                         android:bufferType="spannable"
                         android:text="0 / 2000"
-                        android:textSize="23sp" />
+                        android:textSize="20sp" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text=" kcal"
-                        android:textSize="25sp" />
+                        android:textSize="23sp" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -74,11 +88,11 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="150dp"
+                        android:layout_width="120dp"
                         android:layout_height="wrap_content"
                         android:gravity="end"
                         android:text="탄수화물  "
-                        android:textSize="25sp" />
+                        android:textSize="23sp" />
 
                     <TextView
                         android:id="@+id/carbohydrate"
@@ -87,13 +101,13 @@
                         android:focusableInTouchMode="false"
                         android:bufferType="spannable"
                         android:text="0 / 200"
-                        android:textSize="23sp" />
+                        android:textSize="20sp" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text=" g"
-                        android:textSize="25sp" />
+                        android:textSize="23sp" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -102,11 +116,11 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="150dp"
+                        android:layout_width="120dp"
                         android:layout_height="wrap_content"
                         android:gravity="end"
                         android:text="단백질  "
-                        android:textSize="25sp" />
+                        android:textSize="23sp" />
 
                     <TextView
                         android:id="@+id/protein"
@@ -115,13 +129,13 @@
                         android:focusableInTouchMode="false"
                         android:bufferType="spannable"
                         android:text="0 / 55"
-                        android:textSize="23dp" />
+                        android:textSize="20sp" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text=" g"
-                        android:textSize="25sp" />
+                        android:textSize="23sp" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -130,11 +144,11 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="150dp"
+                        android:layout_width="120dp"
                         android:layout_height="wrap_content"
                         android:gravity="end"
                         android:text="지방  "
-                        android:textSize="25sp" />
+                        android:textSize="23sp" />
 
                     <TextView
                         android:id="@+id/fat"
@@ -143,13 +157,13 @@
                         android:focusableInTouchMode="false"
                         android:bufferType="spannable"
                         android:text="0 / 50"
-                        android:textSize="23dp" />
+                        android:textSize="20sp" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text=" g"
-                        android:textSize="25sp" />
+                        android:textSize="23sp" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -158,11 +172,11 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="150dp"
+                        android:layout_width="120dp"
                         android:layout_height="wrap_content"
                         android:gravity="end"
                         android:text="나트륨  "
-                        android:textSize="25sp" />
+                        android:textSize="23sp" />
 
                     <TextView
                         android:id="@+id/natrium"
@@ -171,13 +185,13 @@
                         android:focusableInTouchMode="false"
                         android:bufferType="spannable"
                         android:text="0 / 2000"
-                        android:textSize="23dp" />
+                        android:textSize="20sp" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text=" mg"
-                        android:textSize="25sp" />
+                        android:textSize="23sp" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -186,11 +200,11 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="150dp"
+                        android:layout_width="120dp"
                         android:layout_height="wrap_content"
                         android:gravity="end"
                         android:text="콜레스테롤  "
-                        android:textSize="25sp" />
+                        android:textSize="23sp" />
 
                     <TextView
                         android:id="@+id/cholesterol"
@@ -199,19 +213,46 @@
                         android:focusableInTouchMode="false"
                         android:bufferType="spannable"
                         android:text="0 / 300"
-                        android:textSize="23dp" />
+                        android:textSize="20sp" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text=" mg 미만"
-                        android:textSize="25sp" />
+                        android:textSize="23sp" />
                 </LinearLayout>
-
             </LinearLayout>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_centerInParent="true"
+                android:layout_margin="4dp"
+                android:background="#AAAAAA" />
 
+            <TextView
+                android:id="@+id/nutrientsMsgText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text='"필요시 메시지가 출력됩니다."'
+                android:textSize="23sp"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_centerInParent="true"
+                android:layout_margin="4dp"
+                android:background="#AAAAAA" />
+
+            <TextView
+                android:id="@+id/nutrientsRecommendText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text='김치\n김치\n김치\n김치\n김치\n김치\n김치\n김치\n김치\n김치\n김치\n김치\n김치\n김치\n김치\n김치\n김치\n김치\n김치\n김치\n'
+                android:textSize="23sp"/>
+
+
+        </LinearLayout>
 
     </ScrollView>
 
@@ -249,9 +290,9 @@
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
                 android:focusableInTouchMode="false"
+                android:singleLine="true"
                 android:text="조영운"
-                android:textSize="17dp"
-                android:singleLine="true"/>
+                android:textSize="17dp" />
         </LinearLayout>
 
         <LinearLayout
@@ -276,9 +317,9 @@
                 android:background="@android:color/transparent"
                 android:focusableInTouchMode="false"
                 android:maxLength="2"
+                android:singleLine="true"
                 android:text="남성"
-                android:textSize="17dp"
-                android:singleLine="true"/>
+                android:textSize="17dp" />
         </LinearLayout>
 
         <LinearLayout
@@ -305,9 +346,9 @@
                 android:focusableInTouchMode="false"
                 android:inputType="number"
                 android:maxLength="3"
+                android:singleLine="true"
                 android:text="25"
                 android:textSize="17dp"
-                android:singleLine="true"
                 app:layout_constraintStart_toEndOf="@+id/ageText" />
 
             <TextView
@@ -344,9 +385,9 @@
                 android:focusableInTouchMode="false"
                 android:inputType="numberDecimal"
                 android:maxLength="6"
+                android:singleLine="true"
                 android:text="178"
-                android:textSize="17dp"
-                android:singleLine="true"/>
+                android:textSize="17dp" />
 
             <TextView
                 android:id="@+id/textView3"
@@ -367,8 +408,8 @@
                 android:id="@+id/weightText"
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
-                android:gravity="right"
                 android:layout_below="@+id/heightText"
+                android:gravity="right"
                 android:text="몸무게  "
                 android:textSize="20dp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -382,9 +423,9 @@
                 android:focusableInTouchMode="false"
                 android:inputType="numberDecimal"
                 android:maxLength="6"
+                android:singleLine="true"
                 android:text="70"
-                android:textSize="17dp"
-                android:singleLine="true"/>
+                android:textSize="17dp" />
 
             <TextView
                 android:id="@+id/textView4"
