--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="55dp"
-        android:layout_marginBottom="80dp"
+        android:layout_marginBottom="50dp"
         android:text="사용자 정보를 등록해주세요."
         android:textSize="24sp" />
 
@@ -24,16 +24,6 @@
         android:layout_gravity="center"
         android:orientation="horizontal"
         android:checkedButton="@+id/mButton">
-
-   <!--     <TextView
-            android:id="@+id/sexText"
-            android:layout_width="45dp"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/nameText"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginEnd="10dp"
-            android:ems="2"
-            android:hint="성별" />-->
 
         <RadioButton
             android:id="@+id/mButton"
@@ -95,12 +85,65 @@
         android:hint="체중"
         android:inputType="numberDecimal"/>
 
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:layout_marginBottom="5dp"
+        android:gravity="center"
+        android:text="일주일에 얼마나 운동하시나요?"
+        android:textSize="20dp" />
+
+    <RadioGroup
+        android:id="@+id/actGroup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp">
+
+        <RadioButton
+            android:id="@+id/actButton1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="55dp"
+            android:text="거의 하지 않음" />
+
+        <RadioButton
+            android:id="@+id/actButton2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="55dp"
+            android:text="주1~2회정도" />
+
+        <RadioButton
+            android:id="@+id/actButton3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="55dp"
+            android:text="주3~4회정도" />
+
+        <RadioButton
+            android:id="@+id/actButton4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="55dp"
+            android:text="주5회이상" />
+
+        <RadioButton
+            android:id="@+id/actButton5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="55dp"
+            android:text="전문 운동선수" />
+    </RadioGroup>
+
     <Button
         android:id="@+id/registerButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
         android:layout_below="@+id/weightText"
+        android:layout_gravity="center_horizontal"
         android:text="확인" />
+
 
 </LinearLayout>
