--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -1,44 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CameraActivity"
     android:id="@+id/relativeLayout">
 
-<FrameLayout
-    android:id="@+id/frameLayout"
-    android:layout_height="wrap_content"
-    android:layout_width="wrap_content">
+    <FrameLayout
+        android:id="@+id/frameLayout"
+        android:layout_width="match_parent"
+        android:layout_marginTop="70dp"
+        android:layout_height="504dp">
 
-    <TextureView
-        android:id="@+id/preViewScreen"
-        android:layout_alignParentLeft="false"
-        android:layout_alignParentTop="false"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent" />
+        <TextureView
+            android:id="@+id/preViewScreen"
+            android:layout_width="match_parent"
+            android:layout_height="493dp"
+            android:layout_alignParentLeft="false"
+            android:layout_alignParentTop="false" />
 
-</FrameLayout>
+    </FrameLayout>
 
-<LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:layout_below="@+id/frameLayout">
-    <Button
-        android:id="@+id/pictureButton"
-        android:layout_width="162dp"
-        android:layout_height="58dp"
-        android:text="촬영">
-    </Button>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/camera_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/frameLayout"
+        android:orientation="horizontal"
+        android:layout_marginTop="40dp">
 
-    <Button
-        android:id="@+id/confirmButton"
-        android:layout_width="162dp"
-        android:layout_height="58dp"
-        android:text="확인">
-    </Button>
+        <Button
+            android:id="@+id/pictureButton"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:background="@drawable/circlebutton"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"></Button>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-</LinearLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/camera_button"
+        android:gravity="right">
+
+        <Button
+            android:id="@+id/confirmButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="확인"
+            android:layout_marginEnd="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"></Button>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </RelativeLayout>
