--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -50,6 +50,9 @@
             android:id="@+id/confirmButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="#000000"
+            android:textColor="#FFFFFF"
+            android:textSize="18sp"
             android:text="확인"
             android:layout_marginEnd="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
